crates/toml/tests/snapshots/invalid/local-datetime/no-leads-with-milli.stderr
TOML parse error at line 2, column 14
  |
2 | with-milli = 1987-07-5T17:45:00.12
  |              ^^^^^^^^^^^^^^^^^^^^^
invalid date, expected a two-digit day (DD)
